{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 176,
  "lineage": "05b09fe8-afd1-2b09-d2d4-c83f7104d8a3",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "principal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:055929692785:loadbalancer/app/ecommerce-facultad-alb/40fe295acffd779a",
            "arn_suffix": "app/ecommerce-facultad-alb/40fe295acffd779a",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ecommerce-facultad-alb-1853878180.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:055929692785:loadbalancer/app/ecommerce-facultad-alb/40fe295acffd779a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecommerce-facultad-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-056a32c6aed8a4840"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-018d631b237ab089b"
              },
              {
                "subnet_id": "subnet-0d3175f7886eebb63"
              }
            ],
            "subnets": [
              "subnet-018d631b237ab089b",
              "subnet-0d3175f7886eebb63"
            ],
            "tags": {
              "Name": "ecommerce-facultad-alb",
              "Proyecto": "ecommerce-facultad"
            },
            "tags_all": {
              "Name": "ecommerce-facultad-alb",
              "Proyecto": "ecommerce-facultad"
            },
            "vpc_id": "vpc-061980b05786b81c4",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_security_group.alb",
            "module.network.aws_subnet.publica",
            "module.network.aws_vpc.principal"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_forward",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:055929692785:listener/app/ecommerce-facultad-alb/40fe295acffd779a/ca86af6820e8c854",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:055929692785:targetgroup/ecommerce-facultad-tg/00e02aeba303460e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:055929692785:listener/app/ecommerce-facultad-alb/40fe295acffd779a/ca86af6820e8c854",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:055929692785:loadbalancer/app/ecommerce-facultad-alb/40fe295acffd779a",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_lb.principal",
            "module.alb.aws_lb_target_group.app",
            "module.alb.aws_security_group.alb",
            "module.certificado_acm.aws_acm_certificate.cloudfront_cert",
            "module.network.aws_subnet.publica",
            "module.network.aws_vpc.principal"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:055929692785:targetgroup/ecommerce-facultad-tg/00e02aeba303460e",
            "arn_suffix": "targetgroup/ecommerce-facultad-tg/00e02aeba303460e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:055929692785:targetgroup/ecommerce-facultad-tg/00e02aeba303460e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:055929692785:loadbalancer/app/ecommerce-facultad-alb/40fe295acffd779a"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ecommerce-facultad-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "ecommerce-facultad-target-group",
              "Proyecto": "ecommerce-facultad"
            },
            "tags_all": {
              "Name": "ecommerce-facultad-target-group",
              "Proyecto": "ecommerce-facultad"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-061980b05786b81c4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.principal"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055929692785:security-group/sg-056a32c6aed8a4840",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-056a32c6aed8a4840",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ecommerce-facultad-alb-20250920203648654300000003",
            "name_prefix": "ecommerce-facultad-alb-",
            "owner_id": "055929692785",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecommerce-facultad-alb-sg",
              "Proyecto": "ecommerce-facultad"
            },
            "tags_all": {
              "Name": "ecommerce-facultad-alb-sg",
              "Proyecto": "ecommerce-facultad"
            },
            "timeouts": null,
            "vpc_id": "vpc-061980b05786b81c4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.principal"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c02fb55956c7d316",
            "arn": "arn:aws:ec2:us-east-1:055929692785:instance/i-063c4902c1b01eb95",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-063c4902c1b01eb95",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ecommerce-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04ae27fdce2ccfe07",
            "private_dns": "ip-10-0-10-158.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.158",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f88c45427f1515b5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-085272c30ced00a1f",
            "tags": {
              "Name": "ecommerce-facultad-ec2-app"
            },
            "tags_all": {
              "Name": "ecommerce-facultad-ec2-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07dc6f2d1e23cedd5"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_subnet.privada",
            "module.network.aws_vpc.principal",
            "module.security.aws_security_group.alb_sg",
            "module.security.aws_security_group.ec2_sg",
            "module.security.aws_security_group.rds_sg"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c02fb55956c7d316",
            "arn": "arn:aws:ec2:us-east-1:055929692785:instance/i-0795d030f2c09ac03",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0795d030f2c09ac03",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ecommerce-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05caf6cfd5a885547",
            "private_dns": "ip-10-0-1-17.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.17",
            "public_dns": "ec2-34-228-54-226.compute-1.amazonaws.com",
            "public_ip": "34.228.54.226",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0311ec23c84c05a10",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d3175f7886eebb63",
            "tags": {
              "Name": "ecommerce-facultad-bastion"
            },
            "tags_all": {
              "Name": "ecommerce-facultad-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07dc6f2d1e23cedd5"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_subnet.publica",
            "module.network.aws_vpc.principal",
            "module.security.aws_security_group.alb_sg",
            "module.security.aws_security_group.ec2_sg",
            "module.security.aws_security_group.rds_sg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055929692785:internet-gateway/igw-02865d2716aa60b1f",
            "id": "igw-02865d2716aa60b1f",
            "owner_id": "055929692785",
            "tags": {
              "Name": "ecommerce-facultad-igw"
            },
            "tags_all": {
              "Name": "ecommerce-facultad-igw"
            },
            "vpc_id": "vpc-061980b05786b81c4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.principal"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "salida_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02865d2716aa60b1f",
            "id": "r-rtb-0f7505923439f65ce1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f7505923439f65ce",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.publica",
            "module.network.aws_vpc.principal"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055929692785:route-table/rtb-0f7505923439f65ce",
            "id": "rtb-0f7505923439f65ce",
            "owner_id": "055929692785",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02865d2716aa60b1f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ecommerce-facultad-rt-publica"
            },
            "tags_all": {
              "Name": "ecommerce-facultad-rt-publica"
            },
            "timeouts": null,
            "vpc_id": "vpc-061980b05786b81c4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.principal"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "asociacion_publica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00396fe4dbd780b71",
            "route_table_id": "rtb-0f7505923439f65ce",
            "subnet_id": "subnet-0d3175f7886eebb63"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_route_table.publica",
            "module.network.aws_subnet.publica",
            "module.network.aws_vpc.principal"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0668b651695f98dcc",
            "route_table_id": "rtb-0f7505923439f65ce",
            "subnet_id": "subnet-018d631b237ab089b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_route_table.publica",
            "module.network.aws_subnet.publica",
            "module.network.aws_vpc.principal"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privada",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055929692785:subnet/subnet-085272c30ced00a1f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-085272c30ced00a1f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "055929692785",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecommerce-facultad-subnet-privada-1"
            },
            "tags_all": {
              "Name": "ecommerce-facultad-subnet-privada-1"
            },
            "vpc_id": "vpc-061980b05786b81c4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.principal"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055929692785:subnet/subnet-0e6907edf85fa81e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e6907edf85fa81e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "055929692785",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecommerce-facultad-subnet-privada-2"
            },
            "tags_all": {
              "Name": "ecommerce-facultad-subnet-privada-2"
            },
            "vpc_id": "vpc-061980b05786b81c4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.principal"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055929692785:subnet/subnet-0d3175f7886eebb63",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d3175f7886eebb63",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "055929692785",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecommerce-facultad-subnet-publica-1"
            },
            "tags_all": {
              "Name": "ecommerce-facultad-subnet-publica-1"
            },
            "vpc_id": "vpc-061980b05786b81c4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.principal"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055929692785:subnet/subnet-018d631b237ab089b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-018d631b237ab089b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "055929692785",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecommerce-facultad-subnet-publica-2"
            },
            "tags_all": {
              "Name": "ecommerce-facultad-subnet-publica-2"
            },
            "vpc_id": "vpc-061980b05786b81c4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.principal"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "principal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055929692785:vpc/vpc-061980b05786b81c4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06adb0a7a4dfcc2ba",
            "default_route_table_id": "rtb-04381c4b71ce68172",
            "default_security_group_id": "sg-08c99acfcecc722c0",
            "dhcp_options_id": "dopt-06f4289d420fe148f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-061980b05786b81c4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04381c4b71ce68172",
            "owner_id": "055929692785",
            "tags": {
              "Name": "ecommerce-facultad-vpc"
            },
            "tags_all": {
              "Name": "ecommerce-facultad-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055929692785:security-group/sg-08504d786433ee7c0",
            "description": "Permite trafico publico al ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08504d786433ee7c0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecommerce-facultad-sg-alb",
            "name_prefix": "",
            "owner_id": "055929692785",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecommerce-facultad-sg-alb"
            },
            "tags_all": {
              "Name": "ecommerce-facultad-sg-alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-061980b05786b81c4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.principal"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055929692785:security-group/sg-07dc6f2d1e23cedd5",
            "description": "Solo permite trafico HTTPS desde el ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07dc6f2d1e23cedd5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08504d786433ee7c0"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ecommerce-facultad-sg-ec2",
            "name_prefix": "",
            "owner_id": "055929692785",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecommerce-facultad-sg-ec2"
            },
            "tags_all": {
              "Name": "ecommerce-facultad-sg-ec2"
            },
            "timeouts": null,
            "vpc_id": "vpc-061980b05786b81c4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.principal",
            "module.security.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055929692785:security-group/sg-09327d3a23cd9c6b4",
            "description": "Solo permite trafico desde EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09327d3a23cd9c6b4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07dc6f2d1e23cedd5"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "ecommerce-facultad-sg-rds",
            "name_prefix": "",
            "owner_id": "055929692785",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecommerce-facultad-sg-rds"
            },
            "tags_all": {
              "Name": "ecommerce-facultad-sg-rds"
            },
            "timeouts": null,
            "vpc_id": "vpc-061980b05786b81c4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.principal",
            "module.security.aws_security_group.alb_sg",
            "module.security.aws_security_group.ec2_sg"
          ]
        }
      ]
    }
  ]
}